<resources>
    <string name="app_name">Android Mesh</string>
    <string name="retrofit">Retrofit</string>
    <string name="volley">Volley</string>
    <string name="java">Java</string>
    <string name="kotlin">Kotlin</string>
    <string name="choose_language">Choose Language</string>
    <string name="sample_data_display_in_toast">Click Here To Send HTTP Request To Server And See Response Displayed As Toast</string>
    <string name="player_name">Player Name</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="enter_user_details">Fill fields to edit user</string>
    <string name="enter_user_id">Enter user ID to delete the user</string>
    <string name="name">Name</string>
    <string name="add_user">Add User</string>
    <string name="update_user">Update User</string>
    <string name="delete_user">Delete User</string>
    <string name="job">Job</string>
    <string name="added_user_details">Added user details</string>
    <string name="updated_user_details">Updated user details</string>
    <string name="status_code">Response Status Code: </string>
    <string name="user_name">User Name</string>
    <string name="user_job">User Job</string>
    <string name="user_id">User ID</string>
    <string name="time_stamp">Time Stamp</string>
    <string name="publish_your_post">Publish your post</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="version">Version</string>
    <string name="api_level">API Level</string>
    <string name="post">POST</string>
    <string name="published_post_display_here">Published post display here</string>
    <string name="update_your_post">Update your post</string>
    <string name="update">Update</string>
    <string name="updated_post_display_here">Updated Post Display Here</string>
    <string name="delete">Delete</string>


</resources>