<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="30sp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/choose_language"/>


    <TextView
        android:id="@+id/java_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="16sp"
        android:gravity="center"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/java"/>

    <TextView
        android:id="@+id/kotlin_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginBottom="20sp"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/kotlin"/>

</LinearLayout>