<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:text="@string/name"
            android:layout_marginBottom="5dp"
            android:textSize="18sp"
            android:fontFamily="@font/segoe_ui_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_version"
            android:text="@string/version"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/segoe_ui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_api_level"
            android:text="@string/api_level"
            android:fontFamily="@font/segoe_ui"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="#707070"/>

</LinearLayout>