<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/player_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:scaleType="fitXY"
            android:layout_marginStart="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/player_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="@string/player_name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/player_country_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dip"
                android:fontFamily="@font/segoe_ui"
                android:text="@string/country"
                android:textColor="#707070"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/player_city_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dip"
                android:fontFamily="@font/segoe_ui"
                android:text="@string/city"
                android:textColor="#707070"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="#707070" />

</LinearLayout>